--- a/templates/base.html
+++ b/templates/base.html
@@ -324,6 +324,7 @@
   <script src="static/app/scripts/services/groupservices.js"></script>
   <script src="static/app/scripts/services/liveservices/showservices.js" ></script>
   <script src="static/app/scripts/services/liveservices/feedbackservices.js" ></script>
+  <script src="static/app/scripts/services/liveservices/companyprofileservices.js" ></script>
   <script src="static/app/scripts/services/noteservices.js" ></script>
   <script src="static/app/scripts/services/commentservices.js" ></script>
    <script src="static/app/scripts/services/settingservices.js" ></script>
