--- a/templates/accounts/show.html
+++ b/templates/accounts/show.html
@@ -147,7 +147,7 @@
 
             
             <div class="row-fluid">
-              <div class="span8">
+              <div class="span9">
               <!-- BEGIN PORTLET-->
               <div class="portlet paddingless">
                 <div class="portlet-title line">
@@ -161,10 +161,11 @@
                       <li class="ng-tab" ng-class="{active: selectedTab == 1}"><a ng-click="selectedTab = 1;" >{{ _("Notes") }}</a></li>
                       <li class="ng-tab" ng-class="{active: selectedTab == 2}"><a ng-click="selectedTab = 2;">{{ _("About") }}</a></li>
                       <li class="ng-tab" ng-class="{active: selectedTab == 3}"><a ng-click="selectedTab = 3;">{{ _("Contacts") }}</a></li>
-                      <li class="ng-tab" ng-class="{active: selectedTab == 4}"><a ng-click="selectedTab = 4;">{{ _("Opportunities") }}</a></li>
-                      <li class="ng-tab"  ng-class="{active: selectedTab == 5}"><a ng-click="selectedTab = 5;">{{ _("Cases") }}</a></li>
-                      <li class="ng-tab"  ng-class="{active: selectedTab == 6}"><a ng-click="selectedTab = 6;">{{ _("Attach Documents") }}</a></li>
-                      <li class="ng-tab"  ng-class="{active: selectedTab ==7}"><a ng-click="selectedTab = 7;">{{ _("Send an Email") }}</a></li>
+                      <li class="ng-tab" ng-class="{active: selectedTab == 4}"><a ng-click="selectedTab = 4;">{{ _("Customer Needs") }}</a></li>
+                      <li class="ng-tab" ng-class="{active: selectedTab == 5}"><a ng-click="selectedTab = 5;">{{ _("Opportunities") }}</a></li>
+                      <li class="ng-tab"  ng-class="{active: selectedTab == 6}"><a ng-click="selectedTab = 6;">{{ _("Cases") }}</a></li>
+                      <li class="ng-tab"  ng-class="{active: selectedTab == 7}"><a ng-click="selectedTab = 7;">{{ _("Attach Documents") }}</a></li>
+                      <li class="ng-tab"  ng-class="{active: selectedTab ==8}"><a ng-click="selectedTab = 8;">{{ _("Send an Email") }}</a></li>
                     </ul>
                     <div class="tab-content">
                       <div class="tab-pane active" id="tab_1_1" ng-show="selectedTab == 1">
@@ -424,7 +425,145 @@
 
 
                       </div>
-                       <div class="tab-pane active" id="tab_1_4" ng-show="selectedTab == 4">
+                      <div class="tab-pane active" id="tab_1_4" ng-show="selectedTab == 4">
+                          
+                         <div class="row-fluid cards-container">
+                         <div class="btn-group relbutton">
+            
+                                <button  ng-click="addNeedModal()" id="sample_editable_1_new" class="btn red">
+                                {{_("Add a new Need")}} <i class="icon-plus"></i>
+                                </button>
+                          </div>
+                            <div class="inner-cards-container">
+                                                        
+                             <div  class="span4 responsive" ng-repeat="need in needs" data-tablet="span6" data-desktop="span4">
+                                <div class="dashboard-stat cards-med">
+                                  
+                                  <div class="details">
+                                    <a href="/#/needs/show/<%= need.id %>"><h3 class="relatedcardOppTitle">
+                                     <%=need.name%>
+                                    </h3></a>
+                                    <div class="desc">                           
+                                    <span class="contact-title" ng-show="need.status">{{ _("Status:") }}<a  class="desc" href="/#/search/type:Need <%=need.status%>"># <%=need.status%></a></span> <br>
+                                    <span ng-show="need.priority" class="contact-title" >{{ _("Priority:") }}<a class="desc" href="/#/search/type:Need <%=need.priority%>">#<%=need.priority%> </a></span><br>
+                                      
+                                    
+                                    </div>
+                                  </div>
+                                                 
+                                </div>
+                              </div>
+                              <div ng-show="blankStateneeds" class="span12 responsive" data-tablet="span6" data-desktop="span12">
+                          <div class="dashboard-stat cards">
+                  
+                  
+                                <div class="blank_slate_arrow"></div>
+                              <div class="blank_slate_body">
+                                  <img src="/static/img/cases_blank.png">
+                                <p class="lead">The main goal of cases is to assist collaboration and focus of teams on delivering amazing customer experience.</p>
+                                   </div>
+               
+                                  
+                          </div>
+              </div>
+
+                              </div>
+                            </div>
+                             <div class="row-fluid">
+                                <div class="pagination pull-right" ng-hide="isLoading">
+                                      
+                                      <ul>
+                                        <li ng-show="needspagination.prev"><button ng-click="NeedPrevPageItems()" id="sample_editable_1_new" class="btn">
+                                        {{_("Prev")}} 
+                                        </button></li>
+                                        
+                                        <li  ng-show="needspagination.next"><button ng-click="NeedlistNextPageItems()"  class="btn">
+                                        {{_("Next")}} 
+                                        </button></li>
+                                      </ul>
+                                    </div>
+                                    <h3 class="pagination pull-right" ng-show="isLoading">{{ _("Loading...") }}</h3>
+                              </div>
+
+                      <!--HKA 19.11.2013 Case Modal -->
+                <div id="addNeedModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 id="myModalLabel">{{_("Add new Customer Needs to understand them more")}}</h3>
+              </div>
+              <div class="modal-body">
+                 <form id="addCase" name="addCase" ng-submit="saveNeed(need)" class="form-horizontal"> 
+                  <fieldset>
+                  
+                    
+
+                    
+                    <div class="control-group">
+                        <label  class="required control-label">{{_("Subject of the need")}} </label>
+                       
+                        <div class="controls">
+                          <input type="text" class="input-xlarge" id="id_name" ng-model="need.name">
+                          
+                        </div>
+                    </div>
+                     <div class="control-group">
+                        <label  class="required control-label">{{_("More details about this need")}} </label>
+                       
+                        <div class="controls">
+                           <textarea id="noteBody" class="input-block-level ng-pristine ng-valid" rows="3" ng-model="need.description"></textarea>
+                          
+                        </div>
+                    </div>
+                   
+                    <div class="control-group">
+                        <label  class="required control-label">{{_("How is important for your customer?")}} </label>
+                       
+                        <div class="controls">
+                          <select class="input-xlarge" ng-model="need.priority">
+                            <option value="1">1 - Low</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10 - Critical</option>
+                          </select>
+                          
+                        </div>
+                    </div>
+                    
+                    <div class="control-group">
+                        <label  class="required control-label">{{_("Status")}}</label>
+                       
+                        <div class="controls">
+                          <select class="input-xlarge" ng-model="need.status">
+                            <option value="pending">Hypothese to test</option>
+                            <option value="testing">Testing</option>
+                            <option value="validated">Validated</option>
+                            <option value="rejected">Rejected</option>
+                          </select>
+                          
+                        </div>
+                      
+                    </div>
+                    
+
+                    </fieldset>
+                
+              </div>
+              <div class="modal-footer">
+                <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
+                <button  type="submit" class="btn green addContactNow">{{_("Add this need")}}</button>
+              </div>
+               </form>
+       </div>
+               
+                      <!--HKA 19.11.2013  End Case Modal -->
+                      </div>
+                       <div class="tab-pane active" id="tab_1_5" ng-show="selectedTab == 5">
                           
                          <div class="row-fluid cards-container">
                          
@@ -536,7 +675,7 @@
                 <!--HKA 19.11.2013 End Of Opportunity Modal -->
 
                       </div>
-                      <div class="tab-pane active" id="tab_1_5" ng-show="selectedTab == 5">
+                      <div class="tab-pane active" id="tab_1_6" ng-show="selectedTab == 6">
                           
                          <div class="row-fluid cards-container">
                          <div class="btn-group relbutton">
@@ -659,7 +798,7 @@
                
                       <!--HKA 19.11.2013  End Case Modal -->
                       </div>
-                      <div class="tab-pane active" id="tab_1_6" ng-show="selectedTab == 6">
+                      <div class="tab-pane active" id="tab_1_7" ng-show="selectedTab == 7">
                           
                          <div class="row-fluid cards-container iodrive">
                          <div class="btn-group relbutton">
@@ -704,7 +843,7 @@
                               </div>
                             </div>
                       </div>
-                      <div class="tab-pane active" id="tab_1_7" ng-show="selectedTab == 7">
+                      <div class="tab-pane active" id="tab_1_8" ng-show="selectedTab == 8">
                         
                          <div class="row-fluid">
                            <div class="span12 margin-bottom-10"> 
@@ -740,7 +879,7 @@
               </div>
               <!-- END PORTLET-->
             </div>
-            <div class="span4">
+            <div class="span3">
               <!-- BEGIN PORTLET-->
               <div class="portlet">
                 <div class="portlet-title line">
