Adding interactive posts on ioGrow Live show public page

--- a/templates/live/live_show_page.html
+++ b/templates/live/live_show_page.html
@@ -11,9 +11,16 @@
             </div>
             <div class="span4">
                 <div class="pull-right get-in">
-                     <button  ng-click="showModal()" id="sample_editable_1_new" class="btn green">
-                    Share
-                    </button>
+                      <button id="myBtn" class="btn green g-interactivepost"
+    data-clientid="987765099891.apps.googleusercontent.com"
+    data-contenturl="http://gcdc2013-iogrow.appspot.com/live/shows/{{show.id}}"
+    data-calltoactionlabel="DISCOVER"
+    data-calltoactionurl="http://gcdc2013-iogrow.appspot.com/live/shows/{{show.id}}"
+    data-cookiepolicy="single_host_origin"
+    data-prefilltext="Come Discover this show at #ioGrow :)">
+     <i class="icon-share"></i>
+  Tell your friends
+</button>
                     
                 </div>
             </div>
