About on Company Page

--- a/templates/live/company_profile/comp_profile_show.html
+++ b/templates/live/company_profile/comp_profile_show.html
@@ -199,7 +199,7 @@
 
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3 id="myModalLabel">{{_("Edit Account")}}</h3>
+                <h3 id="myModalLabel">{{_("Edit Company profile")}}</h3>
               </div>
 
               <div class="modal-body">
@@ -304,7 +304,7 @@
                      <div class="control-group">
                         <label  class="control-label">{{_("City")}} </label>
                         <div class="controls">
-                          <input type="text"   id="id_city" ng-model="address.email">
+                          <input type="text"   id="id_city" ng-model="address.city">
                         </div>
                      </div>
                      <div class="control-group">
@@ -316,7 +316,7 @@
                      <div class="control-group">
                         <label  class="control-label">{{_("Postal Code")}} </label>
                         <div class="controls">
-                          <input type="text"   id="id_postal" ng-model="address.postal">
+                          <input type="text"   id="id_postal" ng-model="address.postal_code">
                         </div>
                      </div>
                      <div class="control-group">
