--- a/templates/live/live_base.html
+++ b/templates/live/live_base.html
@@ -181,8 +181,8 @@
                 </div>
                 <div class="span4">
                     <ul class="social-footer">
-                        <li><a href="#"><i class="icon-facebook"></i></a></li>
-                        <li><a href="https://plus.google.com/110820504821255547625/posts"><i class="icon-google-plus" target="new"></i></a></li>
+                        <li><a href="https://www.facebook.com/iogrow" target="new"><i class="icon-facebook"></i></a></li>
+                        <li><a href="https://plus.google.com/110820504821255547625/posts" target="new"><i class="icon-google-plus" ></i></a></li>
                         <li><a href="#"><i class="icon-dribbble"></i></a></li>
                         <li><a href="#"><i class="icon-linkedin"></i></a></li>
                         <li><a href="#"><i class="icon-twitter"></i></a></li>
