Youtube Channel on Company Profile

--- a/templates/live/live_show_page.html
+++ b/templates/live/live_show_page.html
@@ -63,7 +63,7 @@
                 </a></p>
                <button class="btn green">Ask a question or give a feedback</button>
                <br><br>
-               <div class="g-ytsubscribe" data-layout="full" data-channel="googledevelopers">
+               <div class="g-ytsubscribe" data-layout="full" data-channel="{{companyprofile.youtube_channel}}">
                </div>
                
             
