--- a/templates/accounts/show.html
+++ b/templates/accounts/show.html
@@ -460,7 +460,7 @@
                                 <div class="blank_slate_arrow"></div>
                               <div class="blank_slate_body">
                                   <img src="/static/img/cases_blank.png">
-                                <p class="lead">The main goal of cases is to assist collaboration and focus of teams on delivering amazing customer experience.</p>
+                                <p class="lead">Let your customers explain their needs, and after you can validate or reject those needs (Lean Development).</p>
                                    </div>
                
                                   
