--- a/templates/live/live_company_page.html
+++ b/templates/live/live_company_page.html
@@ -14,11 +14,11 @@
             
   <button id="myBtn" class="btn green g-interactivepost"
     data-clientid="987765099891.apps.googleusercontent.com"
-    data-contenturl="https://developers.google.com/+/web/share/interactive"
+    data-contenturl="http://gcdc2013-iogrow.appspot.com/live"
     data-calltoactionlabel="INVITE"
     data-calltoactionurl="https://developers.google.com/+/web/share/interactive?invite=true"
     data-cookiepolicy="single_host_origin"
-    data-prefilltext="Come Discover this company">
+    data-prefilltext="Come Discover this {{companyprofile.name}}">
      <i class="icon-share"></i>
   Tell your friends
 </button>          
@@ -49,14 +49,14 @@
                                   <div class="filter-v1 margin-bottom-40">
                               
                                   <ul class="grid-v1 thumbnails">
-                                     {%for show in shows%}
-                                      <li class="span3 mix category_1"><a href="/live/shows/{{show.id}}" target="new">
-                                      {% if show.youtube_url %}
-                                           <iframe width="100%" height="250" src="http://www.youtube.com/embed/{{show.youtube_url}}?rel=0" frameborder="0" allowfullscreen></iframe>  
+                                     {%for featureshow in featuredshows%}
+                                      <li class="span3 mix category_1"><a href="/live/shows/{{featureshow.id}}" target="new">
+                                      {% if featureshow.youtube_url %}
+                                           <iframe width="100%" height="250" src="http://www.youtube.com/embed/{{featureshow.youtube_url}}?rel=0" frameborder="0" allowfullscreen></iframe>  
                                       {% else %}
                                            <img src="/static/img/gdl-stay-tuned.png" height="450"/>
                                       {% endif %}    
-                                         {{show.name}} - {{show.description}}
+                                         {{featureshow.name}}
                                         </a>
                                       </li>
                                       {%endfor%}
@@ -69,55 +69,39 @@
                                   <h2>Check out our upcoming shows <a href="#"><small>(View all)</small></a></h2>
                                   <ul class="grid-v1 thumbnails">
                                           
-                                          <li class="span3 mix category_1">
+                                       
                                           
-                                              <a href="#"><img class="hangout-icon" src="https://developers.google.com/_/static/frontend/a39d39a910/images/hangout.png"><span> How to grow your startup: Buffer experience (3/12 6:00 p.m.)</span></a>
+                                             {%for featureshow in featuredshows%}
+                                      <li class="span3 mix category_1"><a href="/live/shows/{{featureshow.id}}" target="new">
+                                      {% if featureshow.youtube_url %}
+                                           <iframe width="100%" height="250" src="http://www.youtube.com/embed/{{featureshow.youtube_url}}?rel=0" frameborder="0" allowfullscreen></iframe>  
+                                      {% else %}
+                                           <img src="/static/img/gdl-stay-tuned.png" height="450"/>
+                                      {% endif %}    
+                                         {{featureshow.name}}
+                                        </a>
+                                      </li>
+                                      {%endfor%}
                                                                                     
-                                          </li>
-                                          <li class="span3 mix category_1">
-                                          
-                                              <a href="#"><img class="hangout-icon" src="https://developers.google.com/_/static/frontend/a39d39a910/images/hangout.png"><span> How to grow your startup: Buffer experience (3/12 6:00 p.m.)</span></a>
-                                                                                    
-                                          </li>
-                                          <li class="span3 mix category_1">
-                                          
-                                              <a href="#"><img class="hangout-icon" src="https://developers.google.com/_/static/frontend/a39d39a910/images/hangout.png"><span> How to grow your startup: Buffer experience (3/12 6:00 p.m.)</span></a>
-                                                                                    
-                                          </li>
+                                        
                                          
-                                        </ul>  
+                                        </ul>
+
                                       <h2>Recently aired <a href="#"><small>(View all)</small></a></h2>
                                       <div class="filter-v1 margin-bottom-40">
-                                      <!--
-                                      <ul class="filter-category">
-                                          <li class="filter" data-filter="all">All</li>
-                                          <li class="filter" data-filter="category_1">UI Design</li>
-                                          <li class="filter" data-filter="category_2">Web Development</li>
-                                          <li class="filter" data-filter="category_3">Photography</li>
-                                          <li class="filter" data-filter="category_3 category_1">Wordpress and Logo</li>
-                                      </ul>
-                                      -->
-                                      <ul class="grid-v1 thumbnails">
-                                          <li class="span3 mix category_1"><a href="/live/shows/5821843504103424">
-                                              <img class="video-thumbnail" src="https://i.ytimg.com/vi/7y2VlKJtXsI/mqdefault.jpg">
-                                              Google App Engine, explorando la plataforma
-                                            </a>
-                                          </li>
-                                          <li class="span3 mix category_2"><a href="/live/shows/5821843504103424">
-                                              <img class="video-thumbnail" src="https://i.ytimg.com/vi/OfYLG6FXtqE/mqdefault.jpg">
-                                              Google App Engine, explorando la plataforma
-                                            </a>
-                                          </li>
-                                          <li class="span3 mix category_3"><a href="/live/shows/5821843504103424">
-                                              <img class="video-thumbnail" src="https://i.ytimg.com/vi/9jUN1cc2iWg/mqdefault.jpg">
-                                              Google App Engine, explorando la plataforma
-                                            </a>
-                                          </li>
-                                          <li class="span3 mix category_4"><a href="/live/shows/5821843504103424">
-                                              <img class="video-thumbnail" src="https://i.ytimg.com/vi/KQEv90hZsCk/mqdefault.jpg">
-                                              Google App Engine, explorando la plataforma
-                                            </a>
-                                          </li>
+                                                                        
+                                      <ul class="grid-v1 thumbnails"> 
+                                       {%for recentshow in recentlyshows%}
+                                    <li class="span3 mix category_1"><a href="/live/shows/{{recentshow.id}}" target="new">
+                                         {% if recentshow.youtube_url %}
+                                           <iframe width="100%" height="250" src="http://www.youtube.com/embed/{{recentshow.youtube_url}}?rel=0" frameborder="0" allowfullscreen></iframe>  
+                                         {% else %}
+                                          <img src="/static/img/gdl-stay-tuned.png" height="450"/>
+                                         {% endif %}    
+                                         {{recentshow.name}} 
+                                        </a>
+                                      </li>
+                                      {%endfor%}
 
                                       </ul>
                                   </div>
@@ -225,21 +209,39 @@
                       </div>
                       <div class="tab-pane row-fluid fade in active" id="tab-3">
                                   <h2>Products <a href="#"><small></small></a></h2>
+                                  {%if productvideo%}
                                   <div class="filter-v1 margin-bottom-40">
                               
-                                  <ul class="grid-v1 thumbnails">
+                                <ul class="grid-v1 thumbnails">
+                                  
                                    {%for prodvid in productvideo%}
-                                      <li class="span3 mix category_1"><a href="/live/shows/{{prodvid.id}}">
-                                     <iframe width="100%"  height="250" src="http://www.youtube.com/embed/{{prodvid.youtube_url}}?rel=0" frameborder="0" allowfullscreen></iframe>
-                                          {{prodvid.name}} {{prodvid.description}}
-                                        </a>
-                                      </li>
+                                     <li class="span3 mix category_1"><a href="/live/shows/{{prodvid.id}}">
+                                    {%if prodvid.youtube_url %}
+                                      <iframe width="100%"  height="250" src="http://www.youtube.com/embed/{{prodvid.youtube_url}}?rel=0" frameborder="0" allowfullscreen></iframe>
+                                     {%else%}
+                                       <img src="/static/img/gdl-stay-tuned.png" height="450"/>
+                                       {% endif %}
+                                      {{prodvid.name}} 
+                                    </li>
                                       {%endfor%}
-                                      
-                              
 
-                                  </ul>
-                              </div>  
+                                 </ul>
+                              </div>
+                               {%else%}
+                <div class="span6 responsive" data-tablet="span6" data-desktop="span4">
+                <div class="dashboard-stat cards">
+                  
+                  
+                  <div class="blank_slate_arrow"></div>
+                  <div class="blank_slate_body">
+                      <img src="/static/img/blankshow.png" align="center">
+                      <p class="lead">{{ _('Product Videos pages  let you present your product.') }}</p>
+                  </div>
+               
+                                  
+                </div>
+              </div>
+                                      {%endif%}
                                   
                                       <!---h2>Product B <a href="#"><small>(View all)</small></a></h2>
                                       <div class="filter-v1 margin-bottom-40">
