--- a/templates/live/product_videos/product_videos_show.html
+++ b/templates/live/product_videos/product_videos_show.html
@@ -133,9 +133,9 @@
             <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>     {{_("Product Videos")}} > <%= show.name %></h2>
             
 
-            <span ng-repeat="tag in show.tags"><a class="tag" href="#"> <%=tag%> </a></span>
+            <!--span ng-repeat="tag in show.tags"><a class="tag" href="#"> <%=tag%> </a></span>
             
-             </br>
+             </br-->
               <span class="page-meta"><a href="#" ng-click="edityoutubeurl()" data-toggle="modal" ><img src="/static/img/youtube.png" /><strong>Add/Edit youtube-url </strong></a></span>
               </br>
               
@@ -809,14 +809,14 @@
                           
                         </div>
                     </div>
-                    <div class="control-group">
+                    <!--div class="control-group">
                         <label  class="required control-label">{{_("Tags")}} </label>
                        
                         <div class="controls">
                           <input type="text" class="span8" ui-select2="select2Options" ng-model="list_of_string"
     >                         
                         </div>
-                    </div>
+                    </div-->
                     <div class="control-group">
                         <label  class="required control-label">{{_("Publish this show on i/oGrow Live: Url")}} </label>
                        
