--- a/templates/live/product_videos/product_videos_list.html
+++ b/templates/live/product_videos/product_videos_list.html
@@ -56,7 +56,7 @@
                                                     data-datetimepicker-config="{ startView:'day', minView:'minute' }" />
                                                   </div>
                                                 </div-->
-                                                    <input class="input-block-level" autofocus="" type="text" placeholder="Add #hashtags about this product" id="taskTitle" ng-model="ioevent.tags">
+                                                    <!--input class="input-block-level" autofocus="" type="text" placeholder="Add #hashtags about this product" id="taskTitle" ng-model="ioevent.tags"-->
                                                     
                                                     
                                                     
