--- a/templates/live/shows/list_show.html
+++ b/templates/live/shows/list_show.html
@@ -58,7 +58,7 @@
                                                     data-datetimepicker-config="{ startView:'day', minView:'minute' }" />
                                                   </div>
                                                 </div>
-                 <input class="input-block-level" autofocus="" type="text" placeholder="Add #hashtags about this show" id="taskTitle" ng-model="ioevent.tags">
+                 <!--input class="input-block-level" autofocus="" type="text" placeholder="Add #hashtags about this show" id="taskTitle" ng-model="ioevent.tags"-->
                                                     
                                                     
                                                     
