Adding Add to calendar on ioGrow Live

--- a/templates/live/live_show_page.html
+++ b/templates/live/live_show_page.html
@@ -102,7 +102,7 @@
 
                 <h2>When?</h2>
                     <p>{{show.starts_at}} - {{show.ends_at}}</p>
-                    <p><a class="add-calendar" href="http://www.google.com/calendar/event?action=TEMPLATE&amp;text=Google%20Compute%20Engine%20Load%20Balancing%2C%20a%20quick%20introduction%20&amp;dates=20131001T220000Z/20131001T223000Z&amp;sprop=name%3AGoogle%20Developers&amp;sprop=website%3Adevelopers.google.com&amp;details=https%3A//developers.google.com/live/shows/4603780578410496" target="_blank" data-event="None Google Compute Engine Load Balancing, a quick introduction ">
+                    <p><a class="add-calendar" href="http://www.google.com/calendar/event?action=TEMPLATE&amp;text={{show.name}}&amp;dates={{starts_at}}/{{ends_at}}&amp;sprop=name%3AioGrow&amp;sprop=website%3Aiogrow.com&amp;details=http://gcdc2013-iogrow.appspot.com/live/shows/{{show.id}}" target="_blank" data-event="{{show.name}}">
 
         
                 <img class="small-cal-icon" src="https://developers.google.com/_static/a39d39a910/images/calendar-42.png" width="25" alt="Add to calendar">
