Hangout on air button #65, Fix

--- a/templates/live/shows/show.html
+++ b/templates/live/shows/show.html
@@ -119,10 +119,9 @@
         <div class="row-fluid">
           
           <div class="span12">
-            <div class="pull-right sharebuttonDiv"> 
-                  <a href="#sharingSettingsModal" class="btn blue jfk-button jfk-button-action" data-toggle="modal">
-                    <i class="icon-lock"></i> {{ _("Share") }}
-                  </a>
+            <div  class="pull-right sharebuttonDiv"> 
+            <span id="hangout-on-air"></span>
+                 
                         
                         
                      
